docs: update project documentation and configuration
- Updated Node.js version requirement in AGENTS.md and package.json to >=22.0.0.
- Added CODE_OF_CONDUCT.md and CONTRIBUTING.md to establish community guidelines and contribution processes.
- Introduced SECURITY.md for reporting vulnerabilities and best practices.
- Updated descriptions in package.json files across multiple packages for clarity and consistency.
- Revised README.md and ENVIRONMENT_SETUP.md for improved clarity on setup and configuration.
- Removed outdated IMPLEMENTATION_STATUS.md and MANUAL_TESTING_RESULTS.md files.
- Adjusted Docker commands in README.md for consistency with new file naming conventions.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,7 +2,8 @@
   "name": "backend",
   "version": "0.1.0",
   "private": true,
-  "description": "NestJS backend for Local MCP Gateway",
+  "description": "NestJS API server providing MCP proxy, server aggregation, OAuth 2.1, and profile management",
+  "license": "Elastic-2.0",
   "type": "module",
   "main": "./dist/main.js",
   "scripts": {
