--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -2,7 +2,8 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "description": "React 19 frontend for Local MCP Gateway",
+  "description": "React 19 dashboard for managing MCP servers, profiles, API keys, and inspecting MCP traffic",
+  "license": "Elastic-2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
